tests/negative/type_errors/wrong_function_arg_type.nano
# Expected error: Type mismatch in function argument
# Passing wrong type to function parameter

fn double(x: int) -> int {
    return (* x 2)
}

shadow double {
    assert (== (double 5) 10)
}

fn main() -> int {
    # Error: passing string to function expecting int
    let result: int = (double "hello")
    return result
}

shadow main {
    assert (== (main) 0)
}
